--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Blend RE" />
     <meta name="description" content="Personal Website for games made by toddlers. We learned to wipe our butts two hours ago." />
     <link rel="icon" type="image/x-icon" href="/Images/favicon.png" />
-    <link rel="stylesheet" href="https://www.blended-mann.github.io/posts/StyleSheet.css" />
+    <link rel="stylesheet" href="https://blended-mann.github.io/posts/StyleSheet.css" />
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -72,7 +72,7 @@
                             </b>
                         </p>
 
-                        <img src="https://www.blended-mann.github.io/media/FollicleComic/Issue1/pg1.png">
+                        <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/splashicon.png">
 
                         <div class="button">
                             <a href="https://blended-mann.github.io/media/folliclecomic.html">
