--- a/folliclecomic.html
+++ b/folliclecomic.html
@@ -56,9 +56,9 @@
             Media
         </h2>
 
-        <table>
+        <table style="margin-inline: auto;">
             <tr>
-                <td>
+                <td style="margin-inline: auto;">
                     <div class="column">
                         <h3>
                             <b>
