--- a/folliclecomicissue1.html
+++ b/folliclecomicissue1.html
@@ -23,6 +23,15 @@
   gtag('config', 'G-94Y2MBWZDX');
 </script>
 
+<style>
+    img{
+        width: 90%;
+        height: auto;
+        border-radius: 0;
+        margin: -10px;
+    }
+</style>
+
     <body>
 
         <header>
@@ -67,7 +76,8 @@
                         </h3>
 
 
-                        <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg1.png">
+                        <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg1.png" 
+                            style="border-radius: 25px 25px 0 0; margin-top: 0;">
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg2.png">
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg3.png">
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg4.png">
@@ -75,7 +85,8 @@
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg6.png">
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg7.png">
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg8.png">
-                        <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg9.png">
+                        <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg9.png"
+                            style="border-radius: 0 0 25px 25px;">
 
 
 
