--- a/folliclecomicissue1.html
+++ b/folliclecomicissue1.html
@@ -86,7 +86,7 @@
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg7.png">
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg8.png">
                         <img src="https://blended-mann.github.io/media/FollicleComic/Issue1/pg9.png"
-                            style="border-radius: 0 0 25px 25px;">
+                            style="border-radius: 0 0 25px 25px; margin-bottom: 20px;">
 
 
 
