--- a/folliclecomic.html
+++ b/folliclecomic.html
@@ -56,7 +56,7 @@
             Media
         </h2>
 
-        <table style="margin-inline: auto;">
+        <table style="margin-inline: auto; transform-origin: top; scale: 0.7;">
             <tr>
                 <td style="margin-inline: auto;">
                     <div class="column">
