--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             Media
         </h2>
 
-        <table>
+        <table style="scale: 0.7; margin-inline: auto; transform-origin: top;">
             <tr>
                 <td>
                     <div class="column">
