--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                         <div class="button">
                             <a href="https://blended-mann.github.io/media/folliclecomic.html">
-                                Read More
+                                View Issues
                             </a>
                         </div>
 
